--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     {{content-for "body"}}
+    {{render 'app'}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/movie-presto.js"></script>
